# raytracer

./: Cargo.toml  README.md  TODO.txt  tree.mtl
benches/: cast.rs  main.rs  ray.rs  vec3.rs
src/: cast.rs  color.rs  fidelity_consts.rs  frame.rs  illumination.rs  illumination_memoization.rs  intersection.rs  lib.rs  main.rs  material.rs  matrix.rs  mesh.rs  mtl_parser.rs  obj_importer.rs  obj_parser.rs  object.rs  plane.rs  ray.rs  scenes.rs  sphere.rs  texture.rs  texture_blank.rs  texture_checkered.rs  texture_image.rs  texture_solid.rs  timing.rs  utils.rs  vec3.rs
